Updated config and Dockerfile

--- a/nsjail.cfg
+++ b/nsjail.cfg
@@ -4,18 +4,67 @@ time_limit: 5
 rlimit_as: 256
 rlimit_cpu: 5
 rlimit_fsize: 1024
+
+// Ensure mounts are correctly configured
+mount {
+  src: "/"
+  dst: "/"
+  is_bind: true
+  rw: false
+}
+
 mount {
   src: "/app"
   dst: "/app"
   is_bind: true
+  rw: true
 }
+
+mount {
+  src: "/usr/bin"
+  dst: "/usr/bin"
+  is_bind: true
+  rw: false
+}
+
+mount {
+  src: "/usr/local/bin"
+  dst: "/usr/local/bin"
+  is_bind: true
+  rw: false
+}
+
+mount {
+  src: "/usr/lib"
+  dst: "/usr/lib"
+  is_bind: true
+  rw: false
+}
+
+mount {
+  src: "/usr/local/lib"
+  dst: "/usr/local/lib"
+  is_bind: true
+  rw: false
+}
+
+mount {
+  src: "/lib"
+  dst: "/lib"
+  is_bind: true
+  rw: false
+}
+
 mount {
   src: "/usr/lib/python3.9"
   dst: "/usr/lib/python3.9"
   is_bind: true
+  rw: false
 }
+
 mount {
   src: "/usr/local/lib/python3.9/dist-packages"
   dst: "/usr/local/lib/python3.9/dist-packages"
   is_bind: true
+  rw: false
 }
